// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupRegistrationModificationDialog matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="attendeeSelectionDialogContainer"
                  >
                    <div>
                      <div
                        aria-describedby="dialogHeader"
                        class=""
                        style="background-color: rgb(221, 226, 230); border-radius: 0;"
                      >
                        <div
                          class=""
                          id="dialogHeader"
                          style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                        >
                          <h2
                            class=""
                            style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                          >
                            <div
                              class=""
                              data-cvent-id="close"
                              role="button"
                              tabindex="0"
                            >
                              <span
                                class="container"
                              >
                                <span
                                  aria-hidden="true"
                                  class=""
                                  role="img"
                                />
                              </span>
                            </div>
                            EventGuestSide_GroupRegistrationModificationModal_SelectAttendee__resx
                          </h2>
                        </div>
                      </div>
                      <div
                        class=""
                        name="messageContainer"
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        tabindex="-1"
                      >
                        <div>
                          <div
                            class=""
                          >
                            EventGuestSide_GroupRegistrationModificationModal_Instructions__resx
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Lonnie Curtis
                                </span>
                              </span>
                              <span
                                class="attendeeSelectionLink"
                              >
                                <a
                                  class=""
                                  href="#"
                                  id="bcd51594-d0bb-4f51-9cdb-88f8e85addde"
                                  style="display: inline-block;"
                                >
                                  EventGuestSide_GroupRegistrationModificationModal_ModifyRegistration__resx
                                </a>
                              </span>
                            </div>
                            <div
                              class="attendeeSelectionSpace"
                            />
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Ian Garcia
                                </span>
                              </span>
                              <span
                                class="attendeeSelectionLink"
                              >
                                <a
                                  class=""
                                  href="#"
                                  id="0bc2a08e-cde2-45f6-bc7f-d0f677013668"
                                  style="display: inline-block;"
                                >
                                  EventGuestSide_GroupRegistrationModificationModal_ModifyRegistration__resx
                                </a>
                              </span>
                            </div>
                            <div
                              class="attendeeSelectionSpace"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationModificationDialog: pending approval modification disabled matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="attendeeSelectionDialogContainer"
                  >
                    <div>
                      <div
                        aria-describedby="dialogHeader"
                        class=""
                        style="background-color: rgb(221, 226, 230); border-radius: 0;"
                      >
                        <div
                          class=""
                          id="dialogHeader"
                          style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                        >
                          <h2
                            class=""
                            style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                          >
                            <div
                              class=""
                              data-cvent-id="close"
                              role="button"
                              tabindex="0"
                            >
                              <span
                                class="container"
                              >
                                <span
                                  aria-hidden="true"
                                  class=""
                                  role="img"
                                />
                              </span>
                            </div>
                            EventGuestSide_GroupRegistrationModificationModal_SelectAttendee__resx
                          </h2>
                        </div>
                      </div>
                      <div
                        class=""
                        name="messageContainer"
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        tabindex="-1"
                      >
                        <div>
                          <div
                            class=""
                          >
                            EventGuestSide_GroupRegistrationModificationModal_Instructions__resx
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Ian Garcia
                                </span>
                              </span>
                              <span
                                class="attendeeSelectionLink"
                              >
                                <a
                                  class=""
                                  href="#"
                                  id="0bc2a08e-cde2-45f6-bc7f-d0f677013668"
                                  style="display: inline-block;"
                                >
                                  EventGuestSide_GroupRegistrationModificationModal_ModifyRegistration__resx
                                </a>
                              </span>
                            </div>
                            <div
                              class="attendeeSelectionSpace"
                            />
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              EventGuestSide_GroupRegistrationModificationModal_ModificationNotAllowed__resx
                            </div>
                            <div>
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Lonnie Curtis
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationModificationDialog: with reg mod deadline passed invitee matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="attendeeSelectionDialogContainer"
                  >
                    <div>
                      <div
                        aria-describedby="dialogHeader"
                        class=""
                        style="background-color: rgb(221, 226, 230); border-radius: 0;"
                      >
                        <div
                          class=""
                          id="dialogHeader"
                          style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                        >
                          <h2
                            class=""
                            style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                          >
                            <div
                              class=""
                              data-cvent-id="close"
                              role="button"
                              tabindex="0"
                            >
                              <span
                                class="container"
                              >
                                <span
                                  aria-hidden="true"
                                  class=""
                                  role="img"
                                />
                              </span>
                            </div>
                            EventGuestSide_GroupRegistrationModificationModal_SelectAttendee__resx
                          </h2>
                        </div>
                      </div>
                      <div
                        class=""
                        name="messageContainer"
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        tabindex="-1"
                      >
                        <div>
                          <div
                            class=""
                          >
                            EventGuestSide_GroupRegistrationModificationModal_Instructions__resx
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              EventGuestSide_GroupRegistrationModificationModal_ModificationNotAllowed__resx
                            </div>
                            <div>
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Lonnie Curtis
                                </span>
                              </span>
                            </div>
                            <div>
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Ian Garcia
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationModificationDialog: with reg mod not allowed invitee matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="attendeeSelectionDialogContainer"
                  >
                    <div>
                      <div
                        aria-describedby="dialogHeader"
                        class=""
                        style="background-color: rgb(221, 226, 230); border-radius: 0;"
                      >
                        <div
                          class=""
                          id="dialogHeader"
                          style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                        >
                          <h2
                            class=""
                            style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                          >
                            <div
                              class=""
                              data-cvent-id="close"
                              role="button"
                              tabindex="0"
                            >
                              <span
                                class="container"
                              >
                                <span
                                  aria-hidden="true"
                                  class=""
                                  role="img"
                                />
                              </span>
                            </div>
                            EventGuestSide_GroupRegistrationModificationModal_SelectAttendee__resx
                          </h2>
                        </div>
                      </div>
                      <div
                        class=""
                        name="messageContainer"
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        tabindex="-1"
                      >
                        <div>
                          <div
                            class=""
                          >
                            EventGuestSide_GroupRegistrationModificationModal_Instructions__resx
                          </div>
                          <div>
                            <div
                              class=""
                            >
                              EventGuestSide_GroupRegistrationModificationModal_ModificationNotAllowed__resx
                            </div>
                            <div>
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Lonnie Curtis
                                </span>
                              </span>
                            </div>
                            <div>
                              <span
                                class="attendeeSelectionName"
                              >
                                <span
                                  class=""
                                  style="display: inline-block;"
                                >
                                  Ian Garcia
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;
